--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,16 +6,62 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/gongyoumi@gmail.com.js" crossorigin="anonymous"></script>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body class="d-flex flex-column vh-100">
-  <header>
-  <nav class="navbar navbar-dark bg-light">
-  </nav>
-  </header>
+  <body class="vh-100">
+   <header class="d-flex">
+    <nav class="container pt-3">
+     <div class="row align-items-center">
+      <div class="col-md-2 text-start">
+       <div class="navbar-brand mt-5 mb-3">LOGO</div>
+      </div>
+      <ul class="d-flex flex-row offset-4 col-md-6 gap-5 justify-content-end">
+       <% if admin_signed_in? %>
+        <li class="d-flex">
+         <%= link_to "About", about_path, class:"btn btn-outline-secondary text-black", style: "width: 90px;"%>
+        </li>
+        <li class="d-flex">
+         <%= link_to "商品一覧", public_items_path, class: "btn btn-outline-secondary text-black", style: "width: 90px;" %>
+        </li>
+        <li class="d-flex">
+         <%= link_to "新規登録", new_customer_registration_path, class: "btn btn-outline-secondary text-black", style: "width: 90px;" %>
+        </li>
+        <li class="d-flex">
+         <%= link_to "ログイン", customer_session_path, class: "btn btn-outline-secondary text-black", style: "width: 90px;" %>
+        </li>
+       <% else %>
+        <li class="d-flex">
+         <%= link_to "About", about_path, class:"btn btn-outline-secondary text-black", style: "width: 90px;"%>
+        </li>
+        <li class="d-flex">
+         <%= link_to "商品一覧", public_items_path, class: "btn btn-outline-secondary text-black", style: "width: 90px;" %>
+        </li>
+        <li class="d-flex">
+         <%= link_to "新規登録", new_customer_registration_path, class: "btn btn-outline-secondary text-black", style: "width: 90px;" %>
+        </li>
+        <li class="d-flex">
+         <%= link_to "ログイン", customer_session_path, class: "btn btn-outline-secondary text-black", style: "width: 90px;" %>
+        </li>
+       <% end %>
+      </ul>
+      <div class="offset-9 col-md-3 d-flex justify-content-end">
+       <%= form_with url: about_path, method: :get, local: true do |f| %>
+        <div class="input-group">
+        <%= f.search_field :query, placeholder: "Search", class:"form-control" %>
+         <button class="btn btn-outline-secondary" type="submit">
+          <i class="fa-solid fa-magnifying-glass"></i>
+         </button>
+        </div>
+       <% end %>
+      </div>
+     </div>
+    </nav>
+   </header>
     <%= yield %>
   </body>
 </html>
