--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
          <%= link_to "新規登録", new_customer_registration_path, class: "btn btn-outline-secondary text-black", style: "width: 90px;" %>
         </li>
         <li class="d-flex">
-         <%= link_to "ログイン", customer_session_path, class: "btn btn-outline-secondary text-black", style: "width: 90px;" %>
+         <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: "btn btn-outline-secondary text-black", style: "width: 90px;" %>
         </li>
        <% else %>
         <li class="d-flex">
